--- a/action.yml
+++ b/action.yml
@@ -34,7 +34,7 @@ runs:
         echo "version=$VERSION" >> $GITHUB_OUTPUT
         echo "Latest Twingate version: $VERSION"
 
-    - uses: awalsh128/cache-apt-pkgs-action@latest
+    - uses: awalsh128/cache-apt-pkgs-action@v1.6.0
       with:
         packages: twingate
         add-repository: https://packages.twingate.com/apt/
