Revert "Remove wait time before verification"
This reverts commit 28bd380a87eb5341156fe2531898fa812334011e.

--- a/action.yml
+++ b/action.yml
@@ -373,6 +373,9 @@ runs:
             }
           }
 
+          log INFO "Waiting $WAIT_TIME seconds for Twingate service to initialize..."
+          Start-Sleep -Seconds $WAIT_TIME
+
           # Verify service is actually running
           $status_check_attempts = 3
           $status_check_delay = 2
