--- a/.github/workflows/release-verification.yaml
+++ b/.github/workflows/release-verification.yaml
@@ -27,7 +27,7 @@ jobs:
     timeout-minutes: 5
     steps:
       - name: Test published action
-        uses: twingate/github-action
+        uses: twingate/github-action@main
         with:
           service-key: ${{ secrets[matrix.service-key] }}
 
@@ -61,7 +61,7 @@ jobs:
     timeout-minutes: 6
     steps:
       - name: Test published action
-        uses: twingate/github-action
+        uses: twingate/github-action@main
         with:
           service-key: ${{ secrets[matrix.service-key] }}
 
