--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -33,6 +33,7 @@ jobs:
           run: |
             mkdir -p .github/actions/test
             cp action.yml .github/actions/test/action.yml
+            cp -r scripts .github/actions/test/scripts
 
         - uses: ./.github/actions/test
           with:
