--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -28,13 +28,7 @@ jobs:
       steps:
         - uses: actions/checkout@v6
 
-        - name: Move local action to folder where it can be tested
-          shell: bash
-          run: |
-            mkdir -p .github/actions/test
-            cp action.yml .github/actions/test/action.yml
-
-        - uses: ./.github/actions/test
+        - uses: ./
           with:
             service-key: ${{ secrets[matrix.service-key] }}
 
@@ -98,13 +92,7 @@ jobs:
       steps:
         - uses: actions/checkout@v6
 
-        - name: Move local action to folder where it can be tested
-          shell: powershell
-          run: |
-            New-Item -Path ".github/actions/test" -ItemType Directory -Force
-            Copy-Item -Path "action.yml" -Destination ".github/actions/test/action.yml" -Force
-
-        - uses: ./.github/actions/test
+        - uses: ./
           with:
             service-key: ${{ secrets[matrix.service-key] }}
 
