--- a/.github/workflows/integration-tests.yaml
+++ b/.github/workflows/integration-tests.yaml
@@ -5,6 +5,11 @@ on:
     branches:
       - 'main'
   workflow_dispatch:
+    inputs:
+      debug:
+        description: 'Enable debug mode'
+        required: false
+        default: 'false'
 
 jobs:
   test-linux:
@@ -30,6 +35,7 @@ jobs:
         uses: twingate/github-action@main
         with:
           service-key: ${{ secrets[matrix.service-key] }}
+          debug: ${{ inputs.debug }}
 
       - name: Verify Twingate status
         run: twingate status
