--- a/action.yml
+++ b/action.yml
@@ -35,6 +35,7 @@ runs:
       id: twingate-version-linux
       shell: bash
       run: |
+        set -x
         export DEBUG_MODE='${{ inputs.debug }}'
         source ${{ github.action_path }}/scripts/linux-helpers.sh
 
