Add Linux Docker test job to workflows
Add a test-linux-docker job to both .github/workflows/ci.yaml and .github/workflows/integration-tests.yaml. The job runs in an ubuntu:24.04 container (--privileged) with a 10-minute timeout, verifies Twingate status and attempts to access a secure resource via curl. In CI it invokes the local action (./) with the SERVICE_KEY secret; in integration-tests it exercises the published action twingate/github-action@main (passing service-key and debug) to validate behavior in a Docker environment.

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -75,6 +75,28 @@ jobs:
 
         - run: echo "SUCCESS!!! 🤩 This job's status is ${{ job.status }}."
 
+    test-linux-docker:
+      runs-on: ubuntu-latest
+      container:
+        image: ubuntu:24.04
+        options: --privileged
+      timeout-minutes: 10
+      steps:
+        - uses: actions/checkout@v6
+
+        - uses: ./
+          with:
+            service-key: ${{ secrets.SERVICE_KEY }}
+
+        - name: Verify Twingate status
+          run: twingate status
+
+        - name: Access a secure resource
+          env:
+            TEST_URL: http://business.prod.beamreachinc.int/
+          run: |
+            curl -v $TEST_URL
+
     test-windows:
       strategy:
         max-parallel: 4
